--- a/service/.env
+++ b/service/.env
@@ -1,3 +1,6 @@
 NODE_ENV=development
 DATABASE_URL=file:./dev.db
 JWT_SECRET="secret"
+TWILIO_ACCOUNT_SID=AC6d8a23213bd58679963bded2228187ee
+TWILIO_AUTH_TOKEN=e915433e9dad1d3582856dbbf21c817c
+TWILIO_PHONE_NUMBER=+17853844685
