--- a/service/package.json
+++ b/service/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit",
     "check": "prettier --check '**/*.{css,scss,html,ts}'",
     "format": "prettier --write '**/*.{css,scss,html,ts}'",
-    "sms": "ts-node src/infrastructure/sms/index.ts"
+    "sms": "ts-node src/infrastructure/sms/twilio.ts"
   },
   "prisma": {
     "schema": "src/infrastructure/db/schema.prisma",
@@ -35,7 +35,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "ts-results": "^3.3.0",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "twilio": "^4.18.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
