--- a/service/package.json
+++ b/service/package.json
@@ -27,6 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
@@ -34,6 +35,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.5",
     "ts-results": "^3.3.0",
     "tslib": "^2.6.2",
     "twilio": "^4.18.0"
